favicon init, linkedin url integrated

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
+         <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
+         <li><a href="https://www.linkedin.com/in/chemicalstan/"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="#"><i class="fa fa-github"></i></a></li>
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
