--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
    	<ul class="intro-social">        
          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
          <li><a href="https://www.linkedin.com/in/chemicalstan/"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="#"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://github.com/chemicalstan"><i class="fa fa-github"></i></a></li>
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
