--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          <li><a href="https://www.linkedin.com/in/chemicalstan/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/chemicalstan"><i class="fa fa-github"></i></a></li>
          <li><a href="https://twitter.com/chemicalstan"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://instagram.com/chemicalstan"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
