--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Stanley Okonkwo</title>
+	<title>Stanley Ebuka</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -54,7 +54,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">Stanley Okonkwo</a>
+		         <a href="index.html">Stanley Ebuka</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -85,7 +85,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello.</h5>
-	   			<h1>I'm Stanley Okonkwo.</h1>
+	   			<h1>I'm Stanley Ebuka.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Full-stack Developer</span>
@@ -103,6 +103,7 @@
          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
          <li><a href="https://www.linkedin.com/in/chemicalstan/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/chemicalstan"><i class="fa fa-github"></i></a></li>
+         <li><a href="mailto:chemicalstan15@gmail.com"><i class="fa fa-envelope"></i></a></li>
          <li><a href="https://twitter.com/chemicalstan"><i class="fa fa-twitter"></i></a></li>
          <li><a href="https://instagram.com/chemicalstan"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
