--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">Full stack software engineer, building microservices for high availability, scalability, resilience and security, love solving problems, learning recent technologies especially in web and mobile. Most of my experience are based on back-end and front-end web development. Love to write clean, tested code meant to be read by humans, not machines, also well-designed simple architectures that are easily understood by anyone.</p>
    			</div>   			
 
    		</div>   		
