basic profile info integrated

--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<!-- <p>Some basic infomations about me.</p> -->
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Stanley Okonkwo Chukwuebuka</span>
    				</li>
-   				<li>
+   				<!-- <li>
    					<strong>Birth Date:</strong>
    					<span>September 28, 1987</span>
-   				</li>
-   				<li>
+   				</li> -->
+   				<!-- <li>
    					<strong>Job:</strong>
    					<span>Freelancer, Frontend Developer</span>
-   				</li>
+   				</li> -->
    				<li>
-   					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<strong>Github:</strong>
+   					<span>www.github.com/chmeicalstan</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>chemicalstan15@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
