Git skill and progres bar integrated

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -125,7 +125,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Full stack software engineer, building microservices for high availability, scalability, resilience and security, love solving problems, learning recent technologies especially in web and mobile. Most of my experience are based on back-end and front-end web development. Love to write clean, tested code meant to be read by humans, not machines, also well-designed simple architectures that are easily understood by anyone.</p>
+   				<p class="lead">Full-stack software engineer, building microservices for high availability, scalability, resilience and security. I love solving problems, learning recent technologies especially in web and mobile. Most of my experience are based on back-end and front-end web development. Love to write clean and tested code meant to be read by humans, not machines, also well-designed simple architectures that can be easily understood by anyone.</p>
    			</div>   			
 
    		</div>   		
@@ -133,24 +133,16 @@
 
    	<div class="row about-content">
 
-   		<div class="col-six tab-full">
+   		<!-- <div class="col-six tab-full"> -->
 
-   			<h3>Profile</h3>
+   			<!-- <h3>Profile</h3> -->
    			<!-- <p>Some basic infomations about me.</p> -->
 
-   			<ul class="info-list">
+   			<!-- <ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
    					<span>Stanley Okonkwo Chukwuebuka</span>
    				</li>
-   				<!-- <li>
-   					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
-   				</li> -->
-   				<!-- <li>
-   					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
-   				</li> -->
    				<li>
    					<strong>Github:</strong>
    					<span>www.github.com/chmeicalstan</span>
@@ -160,36 +152,62 @@
    					<span>chemicalstan15@gmail.com</span>
    				</li>
 
-   			</ul> <!-- /info-list -->
+			   </ul>  -->
+			   <!-- /info-list -->
 
-   		</div>
+   		<!-- </div> -->
 
    		<div class="col-six tab-full">
 
-   			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
-
+   			<h3>Current Skill Level</h3>
 				<ul class="skill-bars">
+					<li>
+						<div class="progress percent88"><span>88%</span></div>
+						<strong>JavaScript</strong>
+					</li>
+					<li>
+						<div class="progress percent85"><span>85%</span></div>
+						<strong>Node.JS</strong>
+					</li>
+					<li>
+						<div class="progress percent88"><span>88%</span></div>
+						<strong>Express.Js</strong>
+					</li>
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent80"><span>80%</span></div>
 				   	<strong>HTML5</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>CSS3</strong>
 				   </li>
+      
+				</ul> <!-- /skill-bars -->		
+
+   		</div>
+   		<div class="col-six tab-full">
+			   <br>
+				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Figma &amp; Adobe XD</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent85"><span>85%</span></div>
+				   	<strong>Bootstrap</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent85"><span>85%</span></div>
+				   	<strong>MySQL &amp; PostgreSQL</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent80"><span>80%</span></div>
 				   	<strong>PHP</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<div class="progress percent70"><span>70%</span></div>
+				   	<strong>Adobe Photoshop</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -1041,3 +1059,8 @@
 </body>
 
 </html>
+
+
+
+Partook in technical strategy meetings and provide input on architectural decisions for building performant web applications that fit the current client's particular use case. Involved in the design, documentation, implementation, and testing of the REST API powering Andela's BarefootNomad product while following strict guidelines including regularly maintaining over 90% code test coverage. Mastered industry best practice, unit testing, git workflow, agile methodology, docker, Figma, Pivotal tracker, VS Code, slack, and collaboration. Contributed to developing BarefootNomad so ware to make company global travel and accommodation easy and convenient for the strong workforce of savvy members of staﬀ, by leveraging the modern web. Actively participated in various tech enlightening boot camps and meet-ups.
+Sᴛᴀɴ Eʙᴜᴋᴀ
