--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1HCkMtgmZwaU8VLk6oKuGl7kkpNjJSgIF/view?usp=drivesdk" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
