Resume and Credential section initiated

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/file/d/1HCkMtgmZwaU8VLk6oKuGl7kkpNjJSgIF/view?usp=drivesdk" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1HCkMtgmZwaU8VLk6oKuGl7kkpNjJSgIF/view?usp=drivesdk" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -236,7 +236,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">I have been opportuned to interact and work closely with quite a number of teams in the software development Ecosystem. Here are some of the companies and technologies i've worked with.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
