Work experience updated

--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@
 
 	   				<div class="timeline-content">
 	   					<h4>UpliftHub</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>	- Increasing system reliability by primarily decomposing existing monolithic applications intomicroservices using Node.js and Express.js <br>
+							- Working with an agile team to deploy trans payment, a tool used by the Bauchi state Govt. to save millions of naira in ghost workers money wastage. <br>
+							- Sharing responsibilities with team members to build and support in-house school managementsoftware used in production today by over 21 schools across Nigeria. <br>
+							- Troubleshooting patched computer code, and collaborating with other developers to create single-page web applications.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -278,14 +281,16 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Software Engineer Intern</h3>
+	   					<p>Apr 2018 - Jun 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Andela</h4>
+						   <p>	- Increasing system reliability by primarily decomposing existing monolithic applications intomicroservices using Node.js and Express.js <br>
+							- Working with an agile team to deploy trans payment, a tool used by the Bauchi state Govt. to save millions of naira in ghost workers money wastage. <br>
+							- Sharing responsibilities with team members to build and support in-house school managementsoftware used in production today by over 21 schools across Nigeria. <br>
+							- Troubleshooting patched computer code, and collaborating with other developers to create single-page web applications.</p>	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
