Work experience icons  updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="chemicalstan.ico">
+	<link rel="icon" type="image/png" href="images/icons/chemicalstan.ico">
 
 </head>
 
@@ -256,7 +256,9 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<!-- <i class="fa fa-briefcase"> -->
+							   <img style="border-radius:50%;" src="images/icons/UpliftHub-icon.jpg" alt="" srcset="">
+							<!-- </i> -->
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -277,8 +279,8 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
+							<img style="border-radius:50%;" src="images/icons/Andela-icon.jpg" alt="" srcset="">
+					</div>
 
 	   				<div class="timeline-header">
 	   					<h3>Software Engineer Intern</h3>
@@ -287,7 +289,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Andela</h4>
-						   <p>	- Increasing system reliability by primarily decomposing existing monolithic applications intomicroservices using Node.js and Express.js <br>
+						<p> - Increasing system reliability by primarily decomposing existing monolithic applications intomicroservices using Node.js and Express.js <br>
 							- Working with an agile team to deploy trans payment, a tool used by the Bauchi state Govt. to save millions of naira in ghost workers money wastage. <br>
 							- Sharing responsibilities with team members to build and support in-house school managementsoftware used in production today by over 21 schools across Nigeria. <br>
 							- Troubleshooting patched computer code, and collaborating with other developers to create single-page web applications.</p>	   				</div>
@@ -297,8 +299,8 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
+						<img style="border-radius:50%;" src="images/icons/HNG-icon.png" alt="" srcset="">
+					</div>
 
 	   				<div class="timeline-header">
 	   					<h3>Web Designer</h3>
