Work experience completely integrated

--- a/index.html
+++ b/index.html
@@ -289,10 +289,12 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Andela</h4>
-						<p> - Increasing system reliability by primarily decomposing existing monolithic applications intomicroservices using Node.js and Express.js <br>
-							- Working with an agile team to deploy trans payment, a tool used by the Bauchi state Govt. to save millions of naira in ghost workers money wastage. <br>
-							- Sharing responsibilities with team members to build and support in-house school managementsoftware used in production today by over 21 schools across Nigeria. <br>
-							- Troubleshooting patched computer code, and collaborating with other developers to create single-page web applications.</p>	   				</div>
+						<p>• Partook in technical strategy meetings and provide input on architectural decisions for building performant web applications that fit the current client’s particular use case. <br>
+							• Involved in the design, documentation, implementation, and testing of the REST API powering Andela’s BarefootNomad product while following strict guidelines including regularly maintaining over 90% code test coverage. <br>
+							• Mastered industry best practice, unit testing, git workflow, agile methodology, docker, Figma, Pivotal tracker, VS Code, slack, and collaboration. <br>
+							• Contributed to developing BarefootNomad software to make company global travel and accommodation easy and convenient for the strong workforce of savvy members of staff, by leveraging the modern web. <br>
+							• Actively participated in various tech enlightening bootcamps and meet-up</p>
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
@@ -303,13 +305,14 @@
 					</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Software Engineer Intern</h3>
+	   					<p>Apr 2017 - Jan 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>HNG Internship</h4>
+	   					<p> - Worked closely with software development teams maintaining websites built on basic vanilla Javascript PHP and MongoDB. <br>
+							- Built a full-stack JavaScript Micropost application as a sole contributor. Micropost is a Mini CRUD appbuilt with Node, Express, MongoDB, Bootswatch and Figma for mockup design.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
