Education completely integrated

--- a/index.html
+++ b/index.html
@@ -256,9 +256,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<!-- <i class="fa fa-briefcase"> -->
-							   <img style="border-radius:50%;" src="images/icons/UpliftHub-icon.jpg" alt="" srcset="">
-							<!-- </i> -->
+						<img style="border-radius:50%;" src="images/icons/UpliftHub-icon.jpg" alt="" srcset="">
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -289,7 +287,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Andela</h4>
-						<p>• Partook in technical strategy meetings and provide input on architectural decisions for building performant web applications that fit the current client’s particular use case. <br>
+						<p> • Partook in technical strategy meetings and provide input on architectural decisions for building performant web applications that fit the current client’s particular use case. <br>
 							• Involved in the design, documentation, implementation, and testing of the REST API powering Andela’s BarefootNomad product while following strict guidelines including regularly maintaining over 90% code test coverage. <br>
 							• Mastered industry best practice, unit testing, git workflow, agile methodology, docker, Figma, Pivotal tracker, VS Code, slack, and collaboration. <br>
 							• Contributed to developing BarefootNomad software to make company global travel and accommodation easy and convenient for the strong workforce of savvy members of staff, by leveraging the modern web. <br>
@@ -311,8 +309,8 @@
 
 	   				<div class="timeline-content">
 	   					<h4>HNG Internship</h4>
-	   					<p> - Worked closely with software development teams maintaining websites built on basic vanilla Javascript PHP and MongoDB. <br>
-							- Built a full-stack JavaScript Micropost application as a sole contributor. Micropost is a Mini CRUD appbuilt with Node, Express, MongoDB, Bootswatch and Figma for mockup design.</p>
+	   					<p> - Worked closely with software development teams on Slack, maintaining websites built on basic vanilla Javascript PHP and MongoDB. <br>
+							- Built a full-stack JavaScript Micropost application as a sole contributor. Micropost is a Mini CRUD app built with Node, Express, MongoDB, Bootswatch and Figma for mockup design.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -335,7 +333,7 @@
 
    			<div class="timeline-wrap">
 
-   				<div class="timeline-block">
+   				<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
@@ -351,27 +349,38 @@
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+				</div> -->
+				    <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+						   <!-- <i class="fa fa-graduation-cap"></i> -->
+						   <img style="border-radius: 50%;" src="images/icons/atbu-icon.jpeg" alt="" srcset="">
 	   				</div>
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<p>Mar 2015 - Feb 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+							<h4>
+								<a href="http://atbu.edu.ng" target="_blank" rel="noopener noreferrer">Abubakar Tafawa-Balewa University</a>
+							</h4>
+						   <h6>B.Tech, Industrial Chemistry</h6>
+	   					<p>
+							● Petroleum Technology Development Fund (PTDF) scholar,(2016/17). <br>
+							● Federal government Scholarship beneficiary,(2017/18). <br>
+							● Best student in infrared, Mass, HNMR and C13 spectrum interpretations. <br>
+							● Eight times Vice Chancellor List award recipient. <br>
+							● Faculty of Science Best student (2016/17).
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<div class="timeline-block">
+	   			<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
@@ -387,7 +396,8 @@
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+				   </div>  -->
+				   <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
