--- a/index.html
+++ b/index.html
@@ -355,8 +355,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-						   <!-- <i class="fa fa-graduation-cap"></i> -->
-						   <img style="border-radius: 50%;" src="images/icons/atbu-icon.jpeg" alt="" srcset="">
+						   <i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -370,34 +369,16 @@
 							</h4>
 						   <h6>B.Tech, Industrial Chemistry</h6>
 	   					<p>
-							● Petroleum Technology Development Fund (PTDF) scholar,(2016/17). <br>
-							● Federal government Scholarship beneficiary,(2017/18). <br>
-							● Best student in infrared, Mass, HNMR and C13 spectrum interpretations. <br>
-							● Eight times Vice Chancellor List award recipient. <br>
+							● Petroleum Technology Development Fund (PTDF) scholar (2016/17). <br>
+							● Federal Government Scholarship Beneficiary (2017/18). <br>
+							● Best student in infrared, Mass, HNMR and C13 spectrum interpretations (2016/17). <br>
+							● Eight times Vice Chancellor's List award recipient. <br>
 							● Faculty of Science Best student (2016/17).
 						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<!-- <div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
-
-				   </div>  -->
-				   <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
