folio sorting initialized

--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
 	               </div>
 	        		</div> 
 
+
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="Book-list.gif"alt="Clouds">
@@ -474,13 +475,28 @@
 	               </div>
 					</div>
 					 <!-- /folio-item -->
-
+					 <div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="number-guesser.gif"alt="Clouds">
+						   <a href="#modal-03" class="overlay">             		                  
+							  <div class="folio-item-table">
+								  <div class="folio-item-cell">
+									  <h3 class="folio-title">Clouds</h3>	     					    
+											  <span class="folio-types">
+												   Web Design
+											</span>		     		
+										 </div> 	                      	
+							  </div>                    
+						   </a>
+						</div>
+						 </div>
+						  <!-- /folio-item -->
 	            
 					<!-- /folio-item -->     
 
-	        		<!-- <div class="bgrid folio-item">
+	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="chemoAuth.gif" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -492,12 +508,12 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-					</div>  -->
+					</div> 
 					<!-- /folio-item -->
 
-	            <!-- <div class="bgrid folio-item">
+	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
+	               	<img src="eBookSeller.gif" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -509,7 +525,23 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-					</div>  -->
+					</div> 
+					<!-- /folio-item -->   
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="micropost.gif" alt="Salad">
+	                  <a href="#modal-06" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Salad</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Branding
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+					</div> 
 					<!-- /folio-item -->   
 
 	            <!-- modal popups - begin
