--- a/index.html
+++ b/index.html
@@ -410,26 +410,25 @@
 
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-	         	<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="Loan-calculator.gif" alt="Liberty">
-	                  <a href="#modal-01" class="overlay">	                  	           
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
-		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
-		     					       </span>
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>	               
-	        		</div> <!-- /folio-item -->
+				<div class="bgrid folio-item">
+					<div class="item-wrap">
+						<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="fototells.gif" alt="Beetle">
+					   <a href="#modal-04" class="overlay">                  	                 
+						  <div class="folio-item-table">
+							  <div class="folio-item-cell">
+								  <h3 class="folio-title">Beetle</h3>	     					    
+										  <span class="folio-types">
+											   Branding
+										</span>		     		
+									 </div>  	                      	
+						  </div>                    
+					   </a>
+					</div>
+					 </div> <!-- /folio-item -->
 
 					<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="task-list.gif" alt="Beetle">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="task-list.gif" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -442,9 +441,27 @@
 	                  </a>
 	               </div>
 					</div> <!-- /folio-item -->
+
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="Loan-calculator.gif" alt="Liberty">
+						   <a href="#modal-01" class="overlay">	                  	           
+							  <div class="folio-item-table">
+								  <div class="folio-item-cell">
+											 <h3 class="folio-title">Liberty</h3>	     					    
+											   <span class="folio-types">
+												   Graphic Design
+											 </span>
+										 </div>	                      	
+							  </div>                    
+						   </a>
+						</div>	               
+						 </div> <!-- /folio-item -->
+
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="ghfinder.gif" alt="Shutterbug">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="ghfinder.gif" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -456,28 +473,10 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> 
-
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="Book-list.gif"alt="Clouds">
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Web Design
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-					</div>
-					 <!-- /folio-item -->
-					 <div class="bgrid folio-item">
+	        		</div> <!-- /folio-item -->
+					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="number-guesser.gif"alt="Clouds">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="number-guesser.gif"alt="Clouds">
 						   <a href="#modal-03" class="overlay">             		                  
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
@@ -491,12 +490,26 @@
 						</div>
 						 </div>
 						  <!-- /folio-item -->
-	            
-					<!-- /folio-item -->     
+						  <div class="bgrid folio-item">
+							<div class="item-wrap">
+								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="micropost.gif" alt="Salad">
+							   <a href="#modal-06" class="overlay">
+								  <div class="folio-item-table">
+									  <div class="folio-item-cell">
+										  <h3 class="folio-title">Salad</h3>	     					    
+												  <span class="folio-types">
+													   Branding
+												</span>		     		
+											 </div>	                      	
+								  </div>                    
+							   </a>
+							</div>
+							 </div> 
+							<!-- /folio-item -->     
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="chemoAuth.gif" alt="Lighthouse">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="chemoAuth.gif" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -513,7 +526,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="eBookSeller.gif" alt="Salad">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="eBookSeller.gif" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -526,23 +539,24 @@
 	                  </a>
 	               </div>
 					</div> 
-					<!-- /folio-item -->   
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="micropost.gif" alt="Salad">
-	                  <a href="#modal-06" class="overlay">
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Branding
-		     					      </span>		     		
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-					</div> 
-					<!-- /folio-item -->   
+					<!-- /folio-item --> 
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="Book-list.gif"alt="Clouds">
+						   <a href="#modal-03" class="overlay">             		                  
+							  <div class="folio-item-table">
+								  <div class="folio-item-cell">
+									  <h3 class="folio-title">Clouds</h3>	     					    
+											  <span class="folio-types">
+												   Web Design
+											</span>		     		
+										 </div> 	                      	
+							  </div>                    
+						   </a>
+						</div>
+						 </div>
+						  <!-- /folio-item -->
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
