--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 				<div class="bgrid folio-item">
 					<div class="item-wrap">
-						<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="fototells.gif" alt="Beetle">
+						<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/fototells.gif" alt="Beetle">
 					   <a href="#modal-04" class="overlay">                  	                 
 						  <div class="folio-item-table">
 							  <div class="folio-item-cell">
@@ -428,7 +428,7 @@
 
 					<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="task-list.gif" alt="Beetle">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/task-list.gif" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -445,7 +445,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="Loan-calculator.gif" alt="Liberty">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/Loan-calculator.gif" alt="Liberty">
 						   <a href="#modal-01" class="overlay">	                  	           
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
@@ -461,7 +461,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="ghfinder.gif" alt="Shutterbug">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/ghfinder.gif" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -476,7 +476,7 @@
 	        		</div> <!-- /folio-item -->
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="number-guesser.gif"alt="Clouds">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/number-guesser.gif"alt="Clouds">
 						   <a href="#modal-03" class="overlay">             		                  
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
@@ -492,7 +492,7 @@
 						  <!-- /folio-item -->
 						  <div class="bgrid folio-item">
 							<div class="item-wrap">
-								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="micropost.gif" alt="Salad">
+								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/micropost.gif" alt="Salad">
 							   <a href="#modal-06" class="overlay">
 								  <div class="folio-item-table">
 									  <div class="folio-item-cell">
@@ -509,7 +509,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="chemoAuth.gif" alt="Lighthouse">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/chemoAuth.gif" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -526,7 +526,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="eBookSeller.gif" alt="Salad">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/eBookSeller.gif" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -543,7 +543,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="Book-list.gif"alt="Clouds">
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/Book-list.gif"alt="Clouds">
 						   <a href="#modal-03" class="overlay">             		                  
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
